feat: Implementar migración gradual a ASP.NET Core Identity (Fases 1-9 completadas)
- Agregados paquetes Microsoft.AspNetCore.Identity.EntityFrameworkCore y UI
- Creados modelos ApplicationUser y ApplicationRole
- Modificado ApplicationDbContext para coexistencia dual (Users + IdentityUsers)
- Creadas tablas de Identity en base de datos
- Implementado UserMigrationService para copiar usuarios
- Creado AuthServiceIdentity con todas las funcionalidades de Identity
- Configurado switch UseIdentityAuth en appsettings.json
- Sistema dual: puede usar BCrypt (actual) o Identity (nuevo)
- Documentación completa: INSTRUCCIONES_MIGRACION.md y RESUMEN_MIGRACION_IDENTITY.md

Pendiente: Ejecutar migración de datos (Fase 8 - manual)
Sistema actual sigue funcionando con BCrypt sin cambios

--- a/src/Gateway.Api/Gateway.Api.csproj
+++ b/src/Gateway.Api/Gateway.Api.csproj
@@ -22,6 +22,16 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    
+    <!-- Paquetes para ASP.NET Core Identity -->
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="create_identity_tables.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
