fix: Resetear estado de login y corregir configuración de puertos
PROBLEMA 1 - Toggle SuperAdmin no se resetea:
- Al cerrar sesión y volver, el toggle quedaba en estado inconsistente
- No mostraba el perfil de usuario después del segundo login

SOLUCIÓN:
- Resetear _showSuperAdminHash, _superAdminHash y _loginModel en OnInitializedAsync
- Garantiza estado limpio cada vez que se carga la página de login
- Console.log para tracking de estado

PROBLEMA 2 - Configuración de puertos inconsistente:
- launchSettings.json usaba puerto 8098
- Ejecutábamos manualmente en puerto 8095
- Error de WebSocket en puerto 44316 (cache del navegador)

SOLUCIÓN:
- Actualizado launchSettings.json para usar puerto 8095 consistentemente
- Eliminado perfil https (no necesario para desarrollo)
- Simplificado a un solo perfil: Gateway.Blazor
- applicationUrl: http://localhost:8095 (frontend Blazor)
- API sigue en http://localhost:8096

PRÓXIMOS PASOS:
1. Limpiar cache del navegador
2. Reiniciar Visual Studio
3. Cerrar todas las ventanas del navegador
4. Iniciar desde VS o usar: dotnet run (usará 8095 automáticamente)

--- a/src/Gateway.Blazor/Properties/launchSettings.json
+++ b/src/Gateway.Blazor/Properties/launchSettings.json
@@ -3,25 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8098",
+      "applicationUrl": "http://localhost:8095",
       "sslPort": 0
     }
   },
   "profiles": {
-    "http": {
+    "Gateway.Blazor": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:8098",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7167;http://localhost:8098",
+      "applicationUrl": "http://localhost:8095",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
